--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn==0.23.2
 sqlalchemy==2.0.23
-passlib==1.7.4
-bcrypt==4.1.1
+passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 jinja2==3.1.2
-pydantic[email]==2.5.0
+# Pydantic v1 (sin Rust, compatible con Render)
+pydantic[email]==1.10.13
